--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,5 +17,17 @@ html(lang='en', ng-app)
     script(src="javascripts/webrtc_voxbone_tools.js",type="application/javascript")
 
   body(onload='detectBrowser()')
-    .container
+    nav.navbar.navbar-default.navbar-fixed-top
+      div.container
+        div.navbar-header
+          button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false")
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='#') Voxbone WebRTC Beta
+        div.collapse.navbar-collapse#bs-example-navbar-collapse-1
+          ul.nav.navbar-nav.navbar-right
+            li
+              a(href="#") Login
     block content
