--- a/views/widget.jade
+++ b/views/widget.jade
@@ -74,21 +74,24 @@ block content
       p Button Configuration
       form.form-horizontal
         .form-group
-          label.col-sm-2.control-label Button Label:
-          div.col-sm-10
+          .col-sm-3
+            label.control-label Button Label:
+          .col-sm-9
             input.form-control(type="text", name="user", ng-model="buttonText" value="Call Sales" placeholder="i.e. Call Sales")
 
         .form-group
-          label.col-sm-2.control-label Button Style:
-          div.col-sm-10
+          .col-sm-3
+            label.control-label Button Style:
+          .col-sm-9
             a.btn.btn-primary#dark_theme Dark
             a.btn.btn-success#light_theme Light
 
       p Call Configuration
       form.form-horizontal
         .form-group
-          label.col-sm-2.control-label SIP URI
-          div.col-sm-10
+          .col-sm-3
+            label.control-label SIP URI
+          .col-sm-9
             input.form-control(type="text", name="user", ng-model="sipUri" value="SIP: echotest@voxout.voxbone.com" placeholder="i.e. SIP: echotest@voxout.voxbone.com")
 
       .panel.panel-default
@@ -96,22 +99,25 @@ block content
           p.panel-title
             a.collapsed(data-toggle="collapse",data-target="#collapseAdvancedCallConfiguration",href="#collapseAdvancedCallConfiguration") Advanced Call Configuration
         .panel-collapse.collapse#collapseAdvancedCallConfiguration
-          form.form-horizontal
+          form.form-horizontal.panel-body
             .form-group
-              label.col-sm-2.control-label Caller ID
-              div.col-sm-10
+              .col-sm-3
+                label.control-label Caller ID
+              .col-sm-9
                 input.form-control(type="text", name="user", ng-model="callerId" value="voxrtc_demo" placeholder="i.e. voxrtc_demo")
 
             .form-group
-              label.col-sm-2.control-label Context
-              div.col-sm-10
+              .col-sm-3
+                label.control-label Context
+              .col-sm-9
                 input.form-control(type="text", name="user", ng-model="context")
 
             .form-group
-              label.col-sm-2.control-label DTMF Dial Pad
-              div.col-sm-1
+              .col-sm-3
+                label.control-label DTMF Dial Pad
+              .col-sm-1
                 input.form-control(type="checkbox", name="dtmf_dial_pad" checked)
-              div.col-sm-9
+              .col-sm-8
                 &nbsp;
 
       .panel.panel-default
@@ -121,24 +127,27 @@ block content
         .panel-collapse.collapse#collapseIncompatileBrowserConfiguration
           form.form-horizontal.panel-body
             .form-group
-              label.col-sm-2.control-label Hide the widget
-              div.col-sm-1
+              .col-sm-3
+                label.control-label Hide the widget
+              .col-sm-1
                 input.form-control(type='checkbox', name='hide_widget')
-              div.col-sm-9
+              .col-sm-8
                 &nbsp;
 
             .form-group
-              label.col-sm-2.control-label Link button to a page
-              div.col-sm-1
+              .col-sm-3
+                label.control-label Link button to a page
+              .col-sm-1
                 input.form-control(type='checkbox', name='link_button_to_a_page')
-              div.col-sm-9
+              .col-sm-8
                 input.form-control(type="text", name="link_button_to_a_value", placeholder="Enter url")
 
             .form-group
-              label.col-sm-2.control-label Show text/HTML
-              div.col-sm-1
+              .col-sm-3
+                label.control-label Show text/HTML
+              .col-sm-1
                 input.form-control(type='checkbox', name='show_text_html')
-              div.col-sm-9
+              .col-sm-8
                 input.form-control(type="text", name="show_text_html_value", placeholder="Enter text or HTML")
 
     .col-md-6.col-sm-6.col-xs-12
