--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en', ng-app)
+html(lang='en', ng-app="voxboneApp")
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
