--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,14 +1,14 @@
 doctype html
-html(lang='en', ng-app)
+html(lang='en', ng-app="voxboneApp")
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
 
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js",type="application/javascript")
-    script(src="https://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/hmac-sha1.js",type="application/javascript")
-    script(src="https://crypto-js.googlecode.com/svn/tags/3.1.2/build/components/enc-base64-min.js",type="application/javascript")
-    //- script(src="https://webrtc.voxbone.com/js/voxbone-0.0.2.js",type="text/javascript")
-    //- script(src="https://webrtc.voxbone.com/js/jssip-0.3.0.js",type="text/javascript")
+    script(src="//crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/hmac-sha1.js",type="application/javascript")
+    script(src="//crypto-js.googlecode.com/svn/tags/3.1.2/build/components/enc-base64-min.js",type="application/javascript")
+    //- script(src="//webrtc.voxbone.com/js/voxbone-0.0.2.js",type="text/javascript")
+    //- script(src="//webrtc.voxbone.com/js/jssip-0.3.0.js",type="text/javascript")
 
     script(src="javascripts/jssip-0.7.0.js",type="application/javascript")
     script(src="javascripts/voxbone-0.0.3.js",type="application/javascript")
@@ -16,7 +16,7 @@ html(lang='en', ng-app)
     script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )
     link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/flatly/bootstrap.min.css", rel="stylesheet")
     link(href="//cdn.jsdelivr.net/bootstrap.material-design/0.3.0/css/material.min.css", rel="stylesheet")
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js",type="application/javascript")
+    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js",type="application/javascript")
     script(src="//cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js",type="application/javascript")
 
     script(src="javascripts/webrtc_voxbone_tools.js",type="application/javascript")
