adding login and account updating logic, need to add auth

--- a/views/login.jade
+++ b/views/login.jade
@@ -1,4 +1,42 @@
 extends layout
 
 block content
+  script.
+    var loginApp = 
+      angular.module('voxboneApp', [])
+      .controller('loginController', ['$scope', '$http', '$window', function($scope, $http, $window){
+        $scope.master = {};
+
+        $scope.update = function(login){
+          $scope.master = angular.copy(login);
+        };
+
+        $scope.reset = function(form){
+          if(form){
+            form.$setPristine();
+            form.$setUntouched();
+          }
+          $scope.login = angular.copy($scope.master);
+        };
+
+        $scope.reset();
+
   h1 Login
+
+  #form_container
+    .row
+      .col-md-6.col-sm-6.col-xs-12
+        form#login_form(name="login_form", novalidate, ng-controller="loginController")
+          .form-group
+            label.col-sm-2.control-label Email
+            input.form-control(type="text" id="uemail" name="uemail" ng-model="login.uemail", required, value= email)
+            div(ng-show="login_form.$submitted || login_form.uemail.$touched")
+              div(ng-show="login_form.uemail.$error.required") Email is required
+              div(ng-show="login_form.uemail.$error.email") Email is invalid
+          .form-group
+            label.col-sm-2.control-label Password
+            input.form-control(type="password", id="upassword", name="upassword", ng-model="login.upassword", required)
+            div(ng-show="login_form.$submitted || login_form.upassword.$touched")
+              div(ng-show="login_form.upassword.$error.required") Password is required
+
+          a.btn.btn-primary#login Login
