--- a/views/signup.jade
+++ b/views/signup.jade
@@ -95,4 +95,7 @@ block content
                 div(ng-show="create_account.confirmation.$error.required") Confirmation is required
                 div(ng-show="create_account.confirmation.$error.pwmatch") Password confirmation does not match
           a.btn.btn-primary#create(ng-click="account.processForm()") Create Account
+          br
+          p Already have an account? 
+          a Login here
 
