--- a/public/stylesheets/less/registerPage.less
+++ b/public/stylesheets/less/registerPage.less
@@ -17,7 +17,10 @@
     color: #54606b;
     border: 1px solid #c8cccf;
     .rounded(6px);
-    .boxShadow;
+    .boxShadow();
+    label{
+      margin-bottom: 2px;
+    }
     button{
       display: block;
       width: 100%;
