--- a/public/stylesheets/root.less
+++ b/public/stylesheets/root.less
@@ -6,7 +6,7 @@ Google Web Fonts
 
 /* === Icons === */
 /* Font Awesome */
-//@import url('plugin/font-awesome/font-awesome.less');
+@import url('plugin/font-awesome/font-awesome.min.css');
 
 /* ================================================
 Main Css
@@ -14,7 +14,7 @@ Main Css
 /* Bootstrap Main Css File (unedited) */
 //@import '~/boostrap/less/boostrap';
 
-/* Shortcuts Css Codes */
+/* Shortcuts Css Codes */ 
 @import "less/mixing";
 
 /* Main Css Codes */
@@ -25,13 +25,14 @@ Main Css
 @import "less/fonts";
 @import "less/base";
 @import "less/components";
-@import "less/tables";
 @import "less/header";
-@import "less/footer";
 
 /* App Sections */
 @import "less/registerPage";
+@import "less/createButton";
 
+/* Widget Style */
+@import "less/widget";
 
 /* Responsive Style */
 @import "less/responsive";
