--- a/public/stylesheets/less/colors.less
+++ b/public/stylesheets/less/colors.less
@@ -1,7 +1,9 @@
 /* ===== Color Setup ===== */
 
-@main-bg:     #f0f4f7;
+@main-bg:         #eef2f5;
 @contenttext:     #343c3e;
-
-@vx-purple: #781e75; 
-@navbar-grey: #92a5a5;
+@subText:         #58646e;
+@vx-purple:       #781e75; 
+@navbar-grey:     #92a5a5;
+@border-grey:     #d7dfe1; 
+@panel-bg:         #fbfcfc;
