--- a/views/login.jade
+++ b/views/login.jade
@@ -20,6 +20,30 @@ block content
         };
 
         $scope.reset();
+        
+        $scope.login.processForm = function(){
+          console.log("--> Submitting...");
+          var req = {
+            method: 'POST',
+            url: '/login',
+            headers: {
+              'Content-Type': 'application/json; charset=utf-8'
+            },
+            data: {
+              email: $scope.login.email,
+              password: $scope.login.upassword
+            }
+          };
+          $http(req)
+            .then(function successCallback(response){
+              console.log("entered success callback");
+              console.log(response);
+              //$window.location.href = response.data.redirect + '?email=' + response.data.email;
+            }, function errorCallback(){
+              console.log("entered error callback");
+            });
+        }
+      }]);
 
   h1 Login
 
