--- a/views/login.jade
+++ b/views/login.jade
@@ -36,17 +36,18 @@ block content
           };
           $http(req)
             .then(function successCallback(response){
-              console.log("entered success callback");
               console.log(response);
-              //$window.location.href = response.data.redirect + '?email=' + response.data.email;
+              $window.location.href = response.data.redirect;
             }, function errorCallback(response){
-              console.log("entered error callback");
-              console.log(response);
+              document.getElementById("alert").innerHTML = "Incorrect Password, try again.";
+              document.getElementById("alert").style.display = "block";
             });
         }
       }]);
 
   h1 Login
+  
+  #alert.alert.alert-danger(style="display: none;")
 
   #form_container
     .row
@@ -54,7 +55,7 @@ block content
         form#login_form(name="login_form", novalidate, ng-controller="loginController")
           .form-group
             label.col-sm-2.control-label Email
-            input.form-control(type="email" id="uemail" name="uemail" ng-model="login.uemail", required, value= email)
+            input.form-control(type="email" id="uemail" name="uemail" ng-model="login.uemail", required, value= "#{email}")
             div(ng-show="login_form.$submitted || login_form.uemail.$touched")
               div(ng-show="login_form.uemail.$error.required") Email is required
             div(ng-show="login_form.uemail.$dirty && login_form.uemail.$invalid")
