added encryption to passwords

--- a/views/signup.jade
+++ b/views/signup.jade
@@ -91,5 +91,5 @@ block content
           a.btn.btn-primary#create(ng-click="account.processForm()") Create Account
           br
           p Already have an account? 
-          a Login here
+          a(href="/login") Login here
 
