--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,41 +2,32 @@ doctype html
 html(lang='en', ng-app="voxboneApp")
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+
+    link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet")
+    link(href="stylesheets/root.css", rel="stylesheet")
+    script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js' )
 
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js",type="application/javascript")
     script(src="//crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/hmac-sha1.js",type="application/javascript")
     script(src="//crypto-js.googlecode.com/svn/tags/3.1.2/build/components/enc-base64-min.js",type="application/javascript")
-    //- script(src="//webrtc.voxbone.com/js/voxbone-0.0.2.js",type="text/javascript")
-    //- script(src="//webrtc.voxbone.com/js/jssip-0.3.0.js",type="text/javascript")
+
+    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js",type="application/javascript")
+    script(src="//cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js",type="application/javascript")
 
     script(src="javascripts/jssip-0.7.0.js",type="application/javascript")
     script(src="javascripts/voxbone-0.0.3.js",type="application/javascript")
 
-    script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )
-    link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/flatly/bootstrap.min.css", rel="stylesheet")
-    link(href="//cdn.jsdelivr.net/bootstrap.material-design/0.3.0/css/material.min.css", rel="stylesheet")
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js",type="application/javascript")
-    script(src="//cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js",type="application/javascript")
-
     script(src="javascripts/webrtc_voxbone_tools.js",type="application/javascript")
 
   body(onload='detectBrowser()')
-    nav.navbar.navbar-default.navbar-fixed-top
-      div.container
-        div.navbar-header
-          button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false")
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='#') Voxbone WebRTC Beta
-        div.collapse.navbar-collapse#bs-example-navbar-collapse-1
-          ul.nav.navbar-nav.navbar-right
-            if account
-              li
-                a(href="/logout") Logout
-            else
-              li
-                a(href="/login") Login
+    .container
+      nav.navbar
+        .navbar-header
+          a.navbar-brand(href='#')
+          span.subBrand Voxbone WebRTC Beta
+        .pull-right
+          if account
+            a.login.withripple(href="/logout") Logout
+          else
+            a.login.withripple(href="/login") Login
     block content
