--- a/views/signup.jade
+++ b/views/signup.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   script.
-    var formApp = 
+    var formApp =
       angular.module('voxboneApp', [])
       .controller('formController', ['$scope', '$http', '$window', function($scope, $http, $window){
         $scope.master = {};
@@ -59,35 +59,34 @@ block content
       }
     }]);
 
-  h1 Create an Account
-
-  #form_container
-    p.
-      Note the Voxbone WebRTC Widget Generator Free Trial will not be linked<br/> to your existing Voxbone
-      account.  To use your Voxbone account and an existing DID, please see <a> view instructions</a>
-
+  .main.registerPage
     .row
-      .col-md-6.col-sm-6.col-xs-12
-        form#create_account(name="create_account", novalidate, ng-controller="formController")
-          .form-group
-            label.col-sm-2.control-label Email
-            input.form-control(type="text" id="uemail" name="uemail" ng-model="account.uemail", disabled, value= email, placeHolder= email)
-          hr(style="border-top-color:green")
-          h3 Create a new Password
-          .form-group
-            label.col-sm-2.control-label Password
-            input.form-control(type="password", id="upassword", name="upassword", ng-model="account.upassword", required, ng-minlength="8")
-            div(ng-show="create_account.$submitted || create_account.upassword.$touched")
-              div(ng-show="create_account.upassword.$error.required") Password is required
-              div(ng-show="create_account.upassword.$error.minlength") Password must be at least 8 characters in length
-            .form-group
-              label.col-sm-2.control-label Confirm Password
-              input.form-control(type="password" id="confirmation", name="confirmation" ng-model="account.confirmation", required, pw-check="upassword" )
-              div(ng-show="create_account.$submitted || create_account.confirmation.$touched")
-                div(ng-show="create_account.confirmation.$error.required") Confirmation is required
-                div(ng-show="create_account.confirmation.$error.pwmatch") Password confirmation does not match
-          a.btn.btn-primary#create(ng-click="account.processForm()") Create Account
-          br
-          p Already have an account? 
-          a(href="/login") Login here
+      .col-xs-12
+        h1 Create Account
+
+        #form_container
+          p.
+            #[b Note:] the Voxbone WebRTC Free Trial will not be linked to your existing Voxbone account. To use your Voxbone account and an existing DID, please see #[a(href="#") view instructions]
+
+          .formWrap
+            form#create_account(name="create_account", novalidate, ng-controller="formController")
+              .form-group
+                label.control-label Email address
+                input.form-control(type="text" id="uemail" name="uemail" ng-model="account.uemail", disabled, value= email, placeHolder= email)
+              .form-group
+                label.control-label Password
+                input.form-control(type="password", id="upassword", name="upassword", ng-model="account.upassword", required, ng-minlength="8")
+                div(ng-show="create_account.$submitted || create_account.upassword.$touched")
+                  div(ng-show="create_account.upassword.$error.required") Password is required
+                  div(ng-show="create_account.upassword.$error.minlength") Password must be at least 8 characters in length
+              .form-group
+                label.control-label Confirm Password
+                input.form-control(type="password" id="confirmation", name="confirmation" ng-model="account.confirmation", required, pw-check="upassword" )
+                div(ng-show="create_account.$submitted || create_account.confirmation.$touched")
+                  div(ng-show="create_account.confirmation.$error.required") Confirmation is required
+                  div(ng-show="create_account.confirmation.$error.pwmatch") Password confirmation does not match
+              button.btn.btn-default#create(ng-click="account.processForm()") Create Account
+              br
+              p Already have an account? #[a(href="login") Login here]
+
 
