[UI] Merging Look & Feel to Login Page

--- a/views/login.jade
+++ b/views/login.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   script.
-    var loginApp = 
+    var loginApp =
       angular.module('voxboneApp', [])
       .controller('loginController', ['$scope', '$http', '$window', function($scope, $http, $window){
         $scope.master = {};
@@ -20,7 +20,7 @@ block content
         };
 
         $scope.reset();
-        
+
         $scope.login.processForm = function(){
           console.log("--> Submitting...");
           var req = {
@@ -45,27 +45,30 @@ block content
         }
       }]);
 
-  h1 Login
-  
-  #alert.alert.alert-danger(style="display: none;")
-
-  #form_container
+  .main.registerPage
     .row
-      .col-md-6.col-sm-6.col-xs-12
-        form#login_form(name="login_form", novalidate, ng-controller="loginController")
-          .form-group
-            label.col-sm-2.control-label Email
-            input.form-control(type="email" id="uemail" name="uemail" ng-model="login.uemail", required, value= "#{email}")
-            div(ng-show="login_form.$submitted || login_form.uemail.$touched")
-              div(ng-show="login_form.uemail.$error.required") Email is required
-            div(ng-show="login_form.uemail.$dirty && login_form.uemail.$invalid")
-              div(ng-show="login_form.uemail.$error.email") Email is invalid
-          .form-group
-            label.col-sm-2.control-label Password
-            input.form-control(type="password", id="upassword", name="upassword", ng-model="login.upassword", required)
-            div(ng-show="login_form.$submitted || login_form.upassword.$touched")
-              div(ng-show="login_form.upassword.$error.required") Password is required
+      .col-xs-12
 
-          a.btn.btn-primary#login(ng-click="login.processForm()") Login
-          br
-          a Forgot your password?
+        h1 Login
+
+        #alert.alert.alert-danger(style="display: none;")
+
+        #form_container
+          .formWrap
+            form#login_form(name="login_form", novalidate, ng-controller="loginController")
+              .form-group
+                label.control-label Email
+                input.form-control(type="email" id="uemail" name="uemail" ng-model="login.uemail", required, value= "#{email}")
+                div(ng-show="login_form.$submitted || login_form.uemail.$touched")
+                  div(ng-show="login_form.uemail.$error.required") Email is required
+                div(ng-show="login_form.uemail.$dirty && login_form.uemail.$invalid")
+                  div(ng-show="login_form.uemail.$error.email") Email is invalid
+              .form-group
+                label.control-label Password
+                input.form-control(type="password", id="upassword", name="upassword", ng-model="login.upassword", required)
+                div(ng-show="login_form.$submitted || login_form.upassword.$touched")
+                  div(ng-show="login_form.upassword.$error.required") Password is required
+
+              button.btn.btn-default#login(ng-click="login.processForm()") Login
+              br
+              a Forgot your password?
